--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb://theWizard:theWizard@194.238.16.213:27017/theWizard?authSource=theWizard
 domain=http://localhost:3000
 TOKEN_SECRET=theWizard
+NEXT_PUBLIC_BASE_URL="http://localhost:1122/api/v1"
