--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "next": "14.2.5",
         "nodemailer": "^6.9.14",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-signature-canvas": "^1.0.6",
+        "react-to-print": "^2.15.1"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
@@ -25,6 +27,7 @@
         "@types/nodemailer": "^6.4.15",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/react-signature-canvas": "^1.0.5",
         "eslint": "^8",
         "eslint-config-next": "14.2.5",
         "postcss": "^8",
