--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "dependencies": {
         "axios": "^1.7.2",
         "bcryptjs": "^2.4.3",
+        "chart.js": "^4.4.3",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.5.1",
         "next": "14.2.5",
         "react": "^18",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18",
         "react-signature-canvas": "^1.0.6",
         "react-to-print": "^2.15.1"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
+        "@types/chart.js": "^2.9.41",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20",
         "@types/react": "^18",
